--- a/01.Networking/02.Communication protocols.md
+++ b/01.Networking/02.Communication protocols.md
@@ -1,1 +1,14 @@
+## Different protocols by which different machine communicate?
+
+TCP
+
+
+UDP
+
+
+HTTP 
+-> It is TCP Communication by which different machine communicate with each others
+-> At every Step that is at every request a new TCP Communication is established like a brdige over a river for a single person and that person cross that bridge once.
+-> It is used in Web Browsing
+
 
