--- a/01.Networking/02.Communication Protocols.md
+++ b/01.Networking/02.Communication Protocols.md
@@ -1,14 +1,34 @@
 ## Different protocols by which different machine communicate?
 
 TCP
-
-
 UDP
 
+Refrence
+```
+https://www.avast.com/c-tcp-vs-udp-difference#:~:text=FAQ-,TCP%20vs%20UDP%3A%20Differences%20between%20the%20protocols,reliable%20but%20works%20more%20quickly.
+
+```
 
 HTTP 
 -> It is TCP Communication by which different machine communicate with each others
 -> At every Step that is at every request a new TCP Communication is established like a brdige over a river for a single person and that person cross that bridge once.
 -> It is used in Web Browsing
+
+HTTPS
+
+
+
+Differnece between HTTP and HTTPS
+
+```
+https://medium.com/@datasciencenexus/whats-the-difference-between-http-and-https-6d7ee2fcb709
+
+```
+
+
+WebSockets
+
+https://www.wallarm.com/what/a-simple-explanation-of-what-a-websocket-is
+
 
 
